--- a/CXYO/app/src/main/res/values/strings.xml
+++ b/CXYO/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CXYO</string>
     <string name="title_connect">Connect</string>
     <string name="title_flight_info">Flight</string>
-    <string name="title_request">Request</string>
+    <string name="title_request">Raise</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
